[package]
name = "Ledger"
version = "0.1.0"
description = "Magic Accounting Toolkit."
edition = "2021"
authors = [
    "Bright Kim <br8km@hello.world>",
    "Carlous Bo <ca5bo@hello.world>",
]
keywords = ["accounting", "finance", "budget"]
categories = ["command-line-utilities"]

[dependencies]
# anyhow = "1.0"
# config = "0.14.0"
# yaml-rust2 = "0.9"

thiserror = "1.0"
clap = { version = "4.5.19", features = ["derive"]}
# serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
prettytable-rs = "0.10"
rusty-money = "0.4.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9"


[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
assert_fs = "1.1.2"
